Thu Mar 27 arton
 *ext/riconv.c
	activate conv tables for getenv configuration.
Tue Mar 5 Kuwashima
 *ext/rjb.c
 *ext/rjb.h
 *ext/rjbexception.c
 	add auto load method.
Tue Mar  4 Kuwashima
 *ext/rjbexception.c
 *ext/rjb.c
 *test/test.rb
 	clear(ignore) exception in current java thread, before some operation.
 *ext/rjbexception.c
 *ext/rjb.c
	add auto load for Rjb::bind, Rjb::throw
 *ext/rjb.c
 *test/test.rb
	add Rjb::unbind
 *test/test.rb
 	add loading rubygems 
Sat Feb 23 arton
 *test/test.rb
	let test_field metod use Test.class instead of Point.class
 *test/Test.java
	add a public field for testing
Fri Feb 22 arton
 *ext/rjb.c
	mark version 1.1.3 for the next release.
Fri Feb 22 arton
 *ext/rjb.c
	fix field reference (bug# 18238)
Wed Jan 9 arton
 *ext/rjb.h
	add some ruby macros that defined after 1.8.6 for compatibility
	Change RBridge.class by 1.4.2
 *data/rjb/jp/co/infoseek/hp/arton/rjb/RBridge.class 
	compiled by 1.4.2 version of Java	
 *rjb.c
        mark version 1.1.2 for the next release.
Tue Dec 27 Kuwashima
 *test/Test.java
 *test/test.rb
 *ext/depend
 *ext/load.c
 *ext/extconf.rb
 *ext/rjbexception.c
 *ext/rjb.c
 *ext/riconv.c
 	change for compatibility with Ruby-1.9.0
Tue Nov 20 arton
 *rjb.c
	mark version 1.10.12 for next relase.
 *load.c
	omit useless double-quotations from JAVA_HOME, maybe specifies a longpathname (but useless).
Wed Nov 14 Kuwashima
 *rjb.c
 	add error check to constructor.
Fri Nov 9 arton
 *test.rb
 *Test.java
	add test for reproducing rjb-bugs-15430
 *rjb.c
	fix rjb-bugs-15430 that caused by bad array conversion.
	(generics method result signature is an object, but the real result is typed array)
 *riconv.c
	correct to get the number of array element.
Tue Oct 23 Kuwashima
 *riconv.c
	Change string encoding conversion rule.
Mon Oct 22 Kuwashima
 *riconv.c
 *riconv.h
	recycle iconv instance.
 *test/test.rb
	add cases for test_kjconv
Sun Sep 23 arton
 *rjb.c
	version 1.0.9