@@ -1,4 +1,10 @@
 Thu Mar 27 arton
+ *ext/rjb.c
+	mark version 1.1.4 for the next release.
+ *test/test.rb
+	remove unload, because it fails. 
+	It's more important to assert each functions.
+Thu Mar 27 arton
  *ext/riconv.c
 	activate conv tables for getenv configuration.
 Tue Mar 5 Kuwashima
